[package]
name = "bedrock-rs"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
bytes = "1.0"
thiserror = "1.0"
miniz_oxide = "0.7.1"
rusty-leveldb = "2.0"
zuri_nbt = { version = "0.3.0", features = ["serde"] }
