[package]
name = "bedrock-rs"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
image = "0.23"
thiserror = "1.0"
miniz_oxide = "0.7.1"
rusty-leveldb = "2.0"
zuri_nbt = { version = "0.3.0", features = ["serde"] }
